Fix retransformation of already loaded classes. Fixes #17.